@@ -110,6 +110,7 @@ There are multiple improvements to the documentation theme this release, here ar
  * Avoid creating an extra rich text block when inserting a new block at the end of the content (Matt Westcott)
  * Removed the extra dot in the Wagtail version shown within the admin settings menu item (Loveth Omokaro)
  * Fully remove the obsolete `wagtailsearch_editorspick` table that prevents flushing the database (Matt Westcott)
+ * Update latest version message on Dashboard to accept dev build version format used on nlightly builds (Sam Moran)
 
 ## Upgrade considerations
 
